[gd_scene load_steps=4 format=3 uid="uid://dj45rcuk0lphe"]

[ext_resource type="Script" path="res://docs_and_help/hexbook.gd" id="1_66vxv"]
[ext_resource type="StyleBox" uid="uid://bnvadtxv76wx5" path="res://resources/ui/blank_theme.tres" id="1_t2cdo"]
[ext_resource type="Texture2D" uid="uid://b64fs4i6xedgl" path="res://resources/ui/popup_bg.png" id="2_lhpwn"]

[node name="Hexbook" type="PanelContainer" node_paths=PackedStringArray("tree", "graphic_parent")]
offset_right = 654.0
offset_bottom = 350.0
theme_override_styles/panel = ExtResource("1_t2cdo")
script = ExtResource("1_66vxv")
tree = NodePath("MarginContainer/UDSplit/LRSplit/PatternSelect")
graphic_parent = NodePath("MarginContainer/UDSplit/LRSplit/CenterContainer/GraphicParent")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(0.392157, 0.392157, 0.392157, 1)
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
texture = ExtResource("2_lhpwn")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 28
patch_margin_top = 28
patch_margin_right = 28
patch_margin_bottom = 28

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="UDSplit" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PopupButtons" type="MarginContainer" parent="MarginContainer/UDSplit"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 12

[node name="Drag" type="Button" parent="MarginContainer/UDSplit/PopupButtons"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 13
theme_override_styles/focus = ExtResource("1_t2cdo")
text = "III"

[node name="Label" type="Label" parent="MarginContainer/UDSplit/PopupButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Hexbook"
horizontal_alignment = 1

[node name="Close" type="Button" parent="MarginContainer/UDSplit/PopupButtons"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/focus = ExtResource("1_t2cdo")
text = "X"

[node name="LRSplit" type="HBoxContainer" parent="MarginContainer/UDSplit"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PatternSelect" type="Tree" parent="MarginContainer/UDSplit/LRSplit"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
theme_override_styles/panel = ExtResource("1_t2cdo")
theme_override_styles/focus = ExtResource("1_t2cdo")
hide_root = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/UDSplit/LRSplit"]
clip_contents = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="GraphicParent" type="Control" parent="MarginContainer/UDSplit/LRSplit/CenterContainer"]
layout_mode = 2

[connection signal="button_down" from="MarginContainer/UDSplit/PopupButtons/Drag" to="." method="_on_drag_button_down"]
[connection signal="button_up" from="MarginContainer/UDSplit/PopupButtons/Drag" to="." method="_on_drag_button_up"]
[connection signal="pressed" from="MarginContainer/UDSplit/PopupButtons/Close" to="." method="_on_close_pressed"]
[connection signal="item_mouse_selected" from="MarginContainer/UDSplit/LRSplit/PatternSelect" to="." method="_on_pattern_select_item_mouse_selected"]
[connection signal="item_selected" from="MarginContainer/UDSplit/LRSplit/PatternSelect" to="." method="_on_pattern_select_item_selected"]
